syntax = "proto3";

option csharp_namespace = "GrpcContract";

package cat;

// The greeting service definition.
service Cat {
  // Sends a greeting
  rpc SayMiau(PetRequest) returns (PetReply);
}

// The request message containing the user's name.
message PetRequest {
  string petName = 1;
}

// The response message containing the greetings.
message PetReply {
  string petSaid = 1;
}
